[package]
name = "advent_of_code2015"
version = "0.1.0"
authors = ["Sergio Rodrigues Giraldo <sergio@giraldo.com.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.8.0"
rayon = "1.2.0"
regex = "1"
lazy_static = "1.4.0"
permutohedron = "0.2.4"
serde_json = "1.0"
rust-crypto = "^0.2"
permutator = "0.3.3"
rand = "0.7.2"
divisors="0.1.5"
aoc-bud = "0.0.4"
